<resources>
    <string name="app_name">FirestorePoC</string>
    <string name="holiday_offers">Holiday Offers</string>
    <string name="product_description">Product Description</string>
    <string name="catalog">Catalog</string>
    <string name="product_image">Product Image</string>
    <string name="product_name">Product Name</string>
    <string name="product_price">Product Price</string>
    <string name="description">Description</string>
    <string name="in_stock">In Stock</string>
    <string name="access_other_db">Access Other DB</string>
</resources>
