<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

        <TextView
                android:id="@+id/product_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="#000000"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:text="@string/product_name"/>

        <ImageView
                android:id="@+id/product_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/product_image"
                android:scaleType="fitCenter"/>

        <TextView
                android:id="@+id/product_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="#000000"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:text="@string/product_price"/>

        <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:background="#EEEEEE"
                android:visibility="visible"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/description"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold"/>

        <TextView
                android:id="@+id/product_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="#000000"
                tools:text="@string/product_description"/>

    </LinearLayout>

</ScrollView>