<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/list_item_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:selectableItemBackground"
        app:cardElevation="0dp"
        app:contentPaddingLeft="8dp"
        app:contentPaddingRight="8dp">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

            <ImageView
                    android:id="@+id/product_image"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/product_image"
                    android:scaleType="fitCenter"/>

            <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                <TextView
                        android:id="@+id/product_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:maxLines="2"
                        android:textAlignment="viewStart"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                        android:textColor="#000000"
                        tools:text="@string/product_name"/>

                <TextView
                        android:id="@+id/product_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:textColor="#000000"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        tools:text="@string/product_price"/>

                <TextView
                        android:id="@+id/product_in_stock"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        tools:text=""/>
            </LinearLayout>

        </LinearLayout>

        <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#EEEEEE"/>

    </LinearLayout>

</android.support.v7.widget.CardView>